Fix card appearance issue on Firefox

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -114,7 +114,19 @@ li {
   margin-top: 50px;
 }
 
+.card {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  background-color: #191920;
+  width: 20rem;
+  height: 20rem;
+  margin: 15px;
+  justify-content: center;
+}
 .card:hover {
+  /* boxShadow: `0px 0px 15px ${TEXT_COLOR}`, */
+  box-shadow: 0px 0px 15px #61dafb;
   cursor: pointer;
 }
 
